# agent_prelude.py

./: AGENTS.md  README.md  WORK.md  agent_prelude.py  mise.toml  pyproject.toml
.github/workflows/: ci.yml
chronicles/: 2026-02-27-session.md
scripts/: append_chronicle.py
src/agent_prelude/: PRIMER.md  __init__.py  cli.py
tests/: conftest.py  test_agent_prelude.py
